# valence

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  SECURITY.md
examples/acme-valence-backend-stub/: Cargo.toml  README.md
examples/acme-valence-backend-stub/src/: lib.rs
examples/acme-valence-backend-stub/tests/: backend_contract.rs
examples/admin-runtime-host/: Cargo.toml  README.md
examples/admin-runtime-host/src/: main.rs
examples/codegen-host/: Cargo.toml  README.md  build.rs
examples/codegen-host/schemas/: widget_valence_schema.rs
examples/codegen-host/src/: lib.rs  main.rs
examples/codegen-host/tests/: compile_generated_models.rs
examples/cross-backend-model-host/: Cargo.toml  README.md  build.rs
examples/cross-backend-model-host/schemas/: project_valence_schema.rs  task_valence_schema.rs
examples/cross-backend-model-host/src/: lib.rs
examples/cross-backend-model-host/tests/: routing_metadata.rs
examples/embedded-bootstrap/: Cargo.toml  README.md
examples/embedded-bootstrap/src/: main.rs
examples/hop-chain-model-host/: Cargo.toml  README.md  build.rs
examples/hop-chain-model-host/schemas/: note_valence_schema.rs  org_valence_schema.rs  project_valence_schema.rs  task_valence_schema.rs
examples/hop-chain-model-host/src/: lib.rs
examples/hop-pair-model-host/: Cargo.toml  README.md  build.rs
examples/hop-pair-model-host/schemas/: project_valence_schema.rs  task_valence_schema.rs
examples/hop-pair-model-host/src/: lib.rs
examples/product-model-host/: Cargo.toml  README.md  build.rs
examples/product-model-host/schemas/: project_valence_schema.rs  task_valence_schema.rs
examples/product-model-host/src/: lib.rs
examples/product-model-host/tests/: model_contract.rs
valence/: Cargo.toml  README.md
valence-backend-hybrid/: Cargo.toml
valence-backend-hybrid/src/: backend.rs  builder.rs  cache_policy.rs  edge_cache.rs  hop_exec.rs  lib.rs  record_cache.rs  telemetry.rs  write_through.rs
valence-backend-hybrid/tests/: hybrid_contract.rs
valence-backend-indradb/: Cargo.toml  README.md
valence-backend-indradb/src/: backend.rs  lib.rs
valence-backend-indradb/tests/: backend_contract.rs
valence-backend-mem/: Cargo.toml  README.md
valence-backend-mem/src/: backend.rs  lib.rs  query_filter.rs
valence-backend-mem/tests/: backend_contract.rs
valence-backend-mongodb/: Cargo.toml  README.md
valence-backend-mongodb/src/: backend.rs  config.rs  lib.rs
valence-backend-mongodb/tests/: backend_contract.rs
valence-backend-postgres/: Cargo.toml  README.md
valence-backend-postgres/src/: backend.rs  config.rs  lib.rs
valence-backend-postgres/tests/: backend_contract.rs
valence-backend-redis/: Cargo.toml  README.md
valence-backend-redis/src/: backend.rs  config.rs  fleet.rs  keys.rs  lib.rs
valence-backend-redis/tests/: backend_contract.rs
valence-backend-sql/: Cargo.toml  README.md
valence-backend-sql/src/: document.rs  edges.rs  lib.rs  merge.rs  postgres_ops.rs  query.rs  sqlite_ops.rs
valence-backend-sqlite/: Cargo.toml  README.md
valence-backend-sqlite/src/: backend.rs  lib.rs
valence-backend-sqlite/tests/: backend_contract.rs
valence-backend-surreal/: Cargo.toml  README.md
valence-backend-surreal/src/: bootstrap.rs  connect.rs  embedded.rs  error.rs  inventory.rs  lib.rs  query_exec.rs  record_id.rs  remote.rs
valence-backend-surreal/src/row_json/: from_surreal.rs  mod.rs  projection.rs  to_surreal.rs  types.rs
valence-backend-surreal/tests/: backend_contract.rs  bootstrap_inventory.rs  compiled_query.rs  embedded_crud.rs  graph_edges.rs  rocksdb_persistence.rs  typed_field_roundtrip.rs
valence-bench/: Cargo.toml  EXPERIMENTS.md  PERFORMANCE_STUDY.md  README.md
valence-bench/src/: experiments.rs  main.rs  matrix.rs  report.rs  resource.rs  stats.rs  sweep.rs  wire.rs
valence-bench/src/runners/: bm_v0.rs  bm_v1.rs  bm_v11.rs  bm_v12.rs  bm_v13.rs  bm_v14.rs  bm_v15.rs  bm_v16.rs  bm_v17.rs  bm_v18.rs  bm_v19.rs  bm_v2.rs  bm_v20.rs  bm_v21.rs  bm_v22.rs  bm_v23.rs  bm_v24.rs  bm_v25.rs  bm_v26.rs  bm_v3.rs  bm_v4.rs  bm_v5.rs  bm_v6.rs  bm_v7.rs  bm_v8.rs  bm_v9.rs  mod.rs
valence-bench/src/workload/: firehose.rs  mod.rs  prefill.rs  query_bench.rs
valence-codegen/: Cargo.toml  README.md
valence-codegen/src/: lib.rs
valence-codegen/src/codegen/: mod.rs  schema.rs  (+2 more)
valence-core/: Cargo.toml  README.md
valence-core/src/: actor.rs  admin_entity_delete.rs  batch.rs  compiled_query.rs  compiled_query_factory.rs  connection.rs  database_retry.rs  datetime_unix.rs  entity.rs  error.rs  evaluator.rs  iter.rs  json_as.rs  known_engines.rs  lib.rs  model.rs  owner_ref.rs  privacy_policies.rs  query_compiler.rs  query_compiler_registry.rs  read_cache.rs  record_id.rs  reference.rs  register_logical.rs  request_cache.rs  router.rs  router_key.rs  row_json.rs  schema.rs  schema_api.rs  schema_types.rs  side_effect.rs  trait_registry.rs  trait_schema.rs  ttl.rs  validation.rs
valence-core/tests/: register_logical.rs  typed_field_roundtrip_mem.rs
valence-e2e/: Cargo.toml  README.md
valence-e2e/tests/: admin_runtime_catalog.rs  cross_backend_hops.rs  matrix_catalog.rs  model_runtime_catalog.rs
valence-macros/: Cargo.toml  README.md
valence-macros/src/: lib.rs
valence-schema-dsl/: Cargo.toml  README.md
valence-schema-dsl/src/: extract.rs  file.rs  lib.rs  parse_tests.rs  trait_schema.rs
valence-telemetry/: Cargo.toml  README.md
valence-telemetry/src/: console.rs  dispatch.rs  lib.rs  noop.rs  recording.rs
valence-testkit/: Cargo.toml  README.md
valence-testkit/src/: admin_contract.rs  backend_contract.rs  catalog.rs  deletion_capture.rs  deletion_contract.rs  fixtures.rs  harness_lock.rs  hop_contract.rs  lib.rs  matrix.rs  model_contract.rs  scenario.rs
valence/examples/: hybrid_multi_logical.rs  multi_backend.rs  quickstart.rs  quickstart_indradb.rs  quickstart_mongodb.rs  quickstart_postgres.rs  quickstart_redis.rs  quickstart_sqlite.rs  quickstart_telemetry.rs  surreal_embedded.rs
valence/src/: include_generated.rs  lib.rs
(+194 files in other folders)
