[workspace]
resolver = "2"
members = [
    "valence-core",
    "valence-schema-dsl",
    "valence-macros",
    "valence-telemetry",
    "valence-backend-mem",
    "valence-backend-sql",
    "valence-backend-sqlite",
    "valence-backend-postgres",
    "valence-backend-mongodb",
    "valence-backend-indradb",
    "valence-backend-redis",
    "valence-backend-surreal",
    "valence-codegen",
    "valence",
    "valence-testkit",
    "valence-e2e",
    "valence-bench",
    "examples/minimal-schema",
    "examples/codegen-host",
    "examples/product-model-host",
    "examples/admin-runtime-host",
    "examples/embedded-bootstrap",
    "examples/acme-valence-backend-stub",
    "examples/cross-backend-model-host",
    "examples/hop-pair-model-host",
    "examples/hop-chain-model-host",
]
exclude = []

[workspace.package]
version = "0.1.1"
edition = "2021"
license = "MIT"
description = "Schema-driven ORM for Rust"
repository = "https://github.com/unified-field-dev/valence"
homepage = "https://github.com/unified-field-dev/valence"

[workspace.dependencies]
valence-core = { path = "valence-core", package = "uf-valence-core", version = "0.1.1" }
valence-schema-dsl = { path = "valence-schema-dsl", package = "uf-valence-schema-dsl", version = "0.1.1" }
valence-macros = { path = "valence-macros", package = "uf-valence-macros", version = "0.1.1" }
valence-telemetry = { path = "valence-telemetry", package = "uf-valence-telemetry", version = "0.1.1" }
valence-backend-mem = { path = "valence-backend-mem", package = "uf-valence-backend-mem", version = "0.1.1" }
valence-backend-sql = { path = "valence-backend-sql", package = "uf-valence-backend-sql", version = "0.1.1" }
valence-backend-sqlite = { path = "valence-backend-sqlite", package = "uf-valence-backend-sqlite", version = "0.1.1" }
valence-backend-postgres = { path = "valence-backend-postgres", package = "uf-valence-backend-postgres", version = "0.1.1" }
valence-backend-mongodb = { path = "valence-backend-mongodb", package = "uf-valence-backend-mongodb", version = "0.1.1" }
valence-backend-indradb = { path = "valence-backend-indradb", package = "uf-valence-backend-indradb", version = "0.1.1" }
valence-backend-redis = { path = "valence-backend-redis", package = "uf-valence-backend-redis", version = "0.1.1" }
valence-backend-surreal = { path = "valence-backend-surreal", package = "uf-valence-backend-surreal", version = "0.1.1" }
valence-codegen = { path = "valence-codegen", package = "uf-valence-codegen", version = "0.1.1" }
valence = { path = "valence", package = "uf-valence", version = "0.1.1" }
surrealdb = { version = "3.1", default-features = false }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
anyhow = "1"
async-trait = "0.1"
clap = { version = "4", features = ["derive"] }
tempfile = "3"
syn = { version = "2.0", features = ["full", "extra-traits"] }
quote = "1.0"
proc-macro2 = "1.0"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4", "v5"] }

[workspace.lints.clippy]
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }
doc_markdown = "allow"
module_name_repetitions = "allow"
must_use_candidate = "allow"
similar_names = "allow"
too_many_arguments = "allow"
too_many_lines = "allow"
cognitive_complexity = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
missing_const_for_fn = "allow"
use_self = "allow"
cast_possible_truncation = "allow"
cast_possible_wrap = "allow"
items_after_statements = "allow"
option_if_let_else = "allow"
match_single_binding = "allow"
wildcard_imports = "allow"
unnested_or_patterns = "allow"
needless_pass_by_value = "allow"
needless_pass_by_ref_mut = "allow"
or_fun_call = "allow"
redundant_closure_for_method_calls = "allow"
unnecessary_wraps = "allow"
manual_let_else = "allow"
match_wildcard_for_single_variants = "allow"
struct_excessive_bools = "allow"
if_not_else = "allow"
semicolon_if_nothing_returned = "allow"
format_push_string = "allow"
derivable_impls = "allow"
type_complexity = "allow"
return_self_not_must_use = "allow"
missing_fields_in_debug = "allow"
ref_option = "allow"
clone_on_ref_ptr = "allow"
len_without_is_empty = "allow"
manual_inspect = "allow"
match_same_arms = "allow"
cast_sign_loss = "allow"
cast_precision_loss = "allow"
redundant_pattern_matching = "allow"
trivially_copy_pass_by_ref = "allow"
unnecessary_get_then_check = "allow"
assigning_clones = "allow"
significant_drop_tightening = "allow"
if_same_then_else = "allow"
doc_link_with_quotes = "allow"
branches_sharing_code = "allow"
unused_peekable = "allow"
manual_strip = "allow"
ptr_arg = "allow"
map_unwrap_or = "allow"
await_holding_lock = "allow"
future_not_send = "allow"
redundant_clone = "allow"
search_is_some = "allow"
result_map_or_into_option = "allow"
redundant_pub_crate = "allow"

[workspace.lints.rust]
missing_docs = "allow"
unused_imports = "allow"

[workspace.lints.rustdoc]
broken_intra_doc_links = "warn"
