[package]
name = "uf-valence-backend-indradb"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "IndraDB embedded graph DatabaseBackend adapter for Valence"
documentation = "https://docs.rs/uf-valence-backend-indradb"
keywords = ["orm", "graph", "database"]
categories = ["database"]


[lib]
name = "valence_backend_indradb"

[dependencies]
async-trait = { workspace = true }
indradb-lib = "5"
serde_json = { workspace = true }
tokio = { workspace = true }
uuid = { workspace = true }
valence-core = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["rt-multi-thread", "macros"] }
valence-testkit = { path = "../valence-testkit", default-features = false }

[lints]
workspace = true

[package.metadata.cargo-machete]
ignored = ["indradb-lib"]
