[package]
name = "uf-valence-backend-mem"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "In-memory DatabaseBackend reference adapter for Valence"
documentation = "https://docs.rs/uf-valence-backend-mem"
keywords = ["orm", "in-memory", "database"]
categories = ["database"]


[lib]
name = "valence_backend_mem"

[dependencies]
async-trait = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
valence-core = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["rt-multi-thread", "macros"] }
valence-testkit = { path = "../valence-testkit", default-features = false }
valence-core = { workspace = true, features = ["instrumentation"] }
valence-telemetry = { workspace = true }

[lints]
workspace = true
