[package]
name = "uf-valence-backend-mongodb"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "MongoDB wire DatabaseBackend adapter for Valence"
documentation = "https://docs.rs/uf-valence-backend-mongodb"
keywords = ["orm", "mongodb", "database"]
categories = ["database"]


[lib]
name = "valence_backend_mongodb"

[dependencies]
async-trait = { workspace = true }
futures = "0.3"
mongodb = "3.1"
serde_json = { workspace = true }
tokio = { workspace = true }
uuid = { workspace = true }
valence-core = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["rt-multi-thread", "macros"] }
valence-testkit = { path = "../valence-testkit", default-features = false, features = ["mongodb"] }

[lints]
workspace = true
