[package]
name = "uf-valence-backend-postgres"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Postgres DatabaseBackend adapter for Valence"
documentation = "https://docs.rs/uf-valence-backend-postgres"
keywords = ["orm", "postgres", "database"]
categories = ["database"]


[lib]
name = "valence_backend_postgres"

[dependencies]
async-trait = { workspace = true }
serde_json = { workspace = true }
sqlx = { version = "0.8", features = ["runtime-tokio", "postgres", "json"] }
tokio = { workspace = true }
valence-backend-sql = { path = "../valence-backend-sql", package = "uf-valence-backend-sql", version = "0.1.1" }
valence-core = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["rt-multi-thread", "macros"] }
valence-testkit = { path = "../valence-testkit", default-features = false, features = ["postgres"] }

[lints]
workspace = true
