[package]
name = "uf-valence-backend-redis"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Redis wire DatabaseBackend adapter for Valence"
documentation = "https://docs.rs/uf-valence-backend-redis"
keywords = ["orm", "redis", "database"]
categories = ["database"]


[lib]
name = "valence_backend_redis"

[dependencies]
async-trait = { workspace = true }
redis = { version = "0.27", features = ["tokio-comp", "connection-manager"] }
serde_json = { workspace = true }
tokio = { workspace = true }
uuid = { workspace = true }
valence-core = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["rt-multi-thread", "macros"] }
valence-testkit = { path = "../valence-testkit", default-features = false, features = ["redis"] }

[lints]
workspace = true
