[package]
name = "uf-valence-backend-sql"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Shared SQL helpers for Valence SQL backends (SQLite, Postgres)"
documentation = "https://docs.rs/uf-valence-backend-sql"
keywords = ["orm", "sql", "database"]
categories = ["database"]


[lib]
name = "valence_backend_sql"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite", "postgres", "json"] }
thiserror = { workspace = true }
tokio = { workspace = true }
uuid = { workspace = true }
valence-core = { workspace = true }

[lints]
workspace = true

[package.metadata.cargo-machete]
ignored = ["serde", "thiserror", "tokio"]
