[package]
name = "uf-valence-backend-sqlite"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "SQLite DatabaseBackend adapter for Valence"
documentation = "https://docs.rs/uf-valence-backend-sqlite"
keywords = ["orm", "sqlite", "database"]
categories = ["database"]


[lib]
name = "valence_backend_sqlite"

[dependencies]
async-trait = { workspace = true }
serde_json = { workspace = true }
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite", "json"] }
tokio = { workspace = true }
valence-backend-sql = { path = "../valence-backend-sql", package = "uf-valence-backend-sql", version = "0.1.1" }
valence-core = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["rt-multi-thread", "macros"] }
valence-testkit = { path = "../valence-testkit", default-features = false }

[lints]
workspace = true
