[package]
name = "uf-valence-backend-surreal"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "SurrealDB DatabaseBackend reference adapter for Valence"
documentation = "https://docs.rs/uf-valence-backend-surreal"
keywords = ["orm", "surrealdb", "database"]
categories = ["database"]


[lib]
name = "valence_backend_surreal"

[features]
default = ["embedded-mem"]
embedded-mem = ["surrealdb/kv-mem"]
embedded-rocksdb = ["surrealdb/kv-rocksdb"]
remote = ["surrealdb/protocol-ws", "surrealdb/protocol-http"]
instrumentation = ["valence-core/instrumentation", "dep:valence-telemetry"]
inventory = ["dep:inventory"]
connect-env = []

[dependencies]
async-trait = { workspace = true }
inventory = { version = "0.3", optional = true }
serde = { workspace = true }
serde_json = { workspace = true }
surrealdb = { workspace = true }
valence-core = { workspace = true }
valence-telemetry = { workspace = true, optional = true }

[dev-dependencies]
chrono = { workspace = true }
tokio = { workspace = true, features = ["rt-multi-thread", "macros"] }
valence-core = { workspace = true, features = ["instrumentation"] }
valence-telemetry = { workspace = true }
valence-testkit = { path = "../valence-testkit", default-features = false, features = ["surreal-mem"] }
tempfile = "3"

[[test]]
name = "embedded_crud"
required-features = ["embedded-mem"]

[[test]]
name = "compiled_query"
required-features = ["embedded-mem"]

[[test]]
name = "graph_edges"
required-features = ["embedded-mem"]

[[test]]
name = "rocksdb_persistence"
required-features = ["embedded-rocksdb"]

[[test]]
name = "backend_contract"
required-features = ["embedded-mem"]

[[test]]
name = "typed_field_roundtrip"
required-features = ["embedded-mem"]

[[test]]
name = "bootstrap_inventory"
required-features = ["embedded-mem", "inventory"]

[lints]
workspace = true
