[package]
name = "uf-valence-codegen"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Valence schema codegen (caller-supplied roots)"
documentation = "https://docs.rs/uf-valence-codegen"
keywords = ["orm", "codegen", "schema"]
categories = ["development-tools::build-utils"]


[lib]
name = "valence_codegen"

[dependencies]
anyhow = { workspace = true }
quote = { workspace = true }
syn = { workspace = true }
proc-macro2 = { workspace = true }
prettyplease = "0.2"
valence-core = { workspace = true }
valence-schema-dsl = { workspace = true }

[[bin]]
name = "valence-generate"
path = "src/bin/valence-generate.rs"

[dev-dependencies]
insta = "1"
valence = { workspace = true, features = ["mem"] }

[lints]
workspace = true
