[package]
name = "uf-valence-core"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Valence ports: DatabaseBackend, router, builder, host injectable traits"
documentation = "https://docs.rs/uf-valence-core"
keywords = ["orm", "database", "ports", "async"]
categories = ["database", "asynchronous"]


[lib]
name = "valence_core"

[features]
default = ["instrumentation", "compiler-sql"]
instrumentation = []
compiler-sql = []
compiler-surreal = []
compiler-mongodb = []
compiler-redis = []
compiler-indradb = []
compiler-hybrid = ["compiler-sql"]
sqlite = ["compiler-sql"]
postgres = ["compiler-sql"]
mongodb = ["compiler-mongodb"]
redis = ["compiler-redis"]
indradb = ["compiler-indradb"]
hybrid = ["compiler-hybrid"]

[dependencies]
async-trait = { workspace = true }
inventory = "0.3"
quick_cache = "0.6"
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["time"] }
valence-telemetry = { workspace = true }
anyhow = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true, features = ["v4", "v5"] }
regex = "1"

[dev-dependencies]
tokio = { workspace = true, features = ["rt-multi-thread", "macros"] }
valence-backend-mem = { path = "../valence-backend-mem", package = "uf-valence-backend-mem" }

[lints]
workspace = true
