[package]
name = "valence-e2e"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Valence integration tests — matrix-driven scenario catalog"
publish = false

[features]
default = [
    "surreal-mem",
    "acme-stub",
    "surreal-inventory",
    "sqlite",
    "mongodb",
    "indradb",
    "redis",
    "cross-backend-hops",
]
sqlite = ["valence-testkit/sqlite", "valence/sqlite"]
postgres = ["valence-testkit/postgres", "valence/postgres"]
mongodb = ["valence-testkit/mongodb", "valence/mongodb"]
indradb = ["valence-testkit/indradb", "valence/indradb"]
redis = ["valence-testkit/redis", "valence/redis"]
cross-backend-hops = ["valence-testkit/cross-backend-hops"]
surreal-mem = ["valence-testkit/surreal-mem", "valence/surreal"]
surreal-rocksdb = ["valence-testkit/surreal-rocksdb", "valence/surreal-rocksdb"]
surreal-inventory = ["valence-testkit/surreal-inventory", "valence/surreal-inventory"]
acme-stub = ["valence-testkit/acme-stub"]

[dependencies]
valence = { workspace = true, default-features = false, features = ["mem"] }
valence-testkit = { path = "../valence-testkit" }
tokio = { workspace = true, features = ["rt-multi-thread", "macros"] }

[dev-dependencies]
valence = { workspace = true, default-features = false, features = ["mem", "surreal-inventory"] }

[[test]]
name = "admin_runtime_catalog"
path = "tests/admin_runtime_catalog.rs"
harness = true

[[test]]
name = "cross_backend_hops"
path = "tests/cross_backend_hops.rs"
harness = true

[[test]]
name = "matrix_catalog"
path = "tests/matrix_catalog.rs"
harness = true

[[test]]
name = "model_runtime_catalog"
path = "tests/model_runtime_catalog.rs"
harness = true

[lints]
workspace = true
