[package]
name = "uf-valence-macros"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "valence_schema! procedural macros for Valence"
documentation = "https://docs.rs/uf-valence-macros"
keywords = ["orm", "macros", "schema"]
categories = ["development-tools::procedural-macro-helpers"]

[lib]
name = "valence_macros"
proc-macro = true

[dependencies]
syn = { workspace = true }
quote = { workspace = true }
proc-macro2 = { workspace = true }
valence-schema-dsl = { workspace = true }

[lints]
workspace = true
