[package]
name = "uf-valence-telemetry"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "TelemetrySink trait and console/no-op adapters for Valence"
documentation = "https://docs.rs/uf-valence-telemetry"
keywords = ["telemetry", "observability", "orm"]
categories = ["development-tools"]


[lib]
name = "valence_telemetry"

[dependencies]
serde_json = { workspace = true }

[lints]
workspace = true
