[package]
name = "uf-valence"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Valence facade — schema-driven ORM for Rust"
documentation = "https://docs.rs/uf-valence"
keywords = ["orm", "database", "schema", "privacy", "async"]
categories = ["database", "asynchronous", "api-bindings"]

[package.metadata.docs.rs]
all-features = true


[lib]
name = "valence"

[features]
default = ["mem"]
mem = ["valence-core/compiler-sql", "dep:valence-backend-mem"]
sqlite = ["valence-core/sqlite", "dep:valence-backend-sqlite"]
postgres = ["valence-core/postgres", "dep:valence-backend-postgres"]
mongodb = ["valence-core/mongodb", "dep:valence-backend-mongodb"]
indradb = ["valence-core/indradb", "dep:valence-backend-indradb"]
hybrid = [
    "valence-core/hybrid",
    "dep:valence-backend-hybrid",
    "dep:valence-backend-indradb",
    "dep:valence-backend-postgres",
]
redis = ["valence-core/redis", "dep:valence-backend-redis"]
surreal = ["valence-core/compiler-surreal", "dep:valence-backend-surreal", "valence-backend-surreal/embedded-mem"]
surreal-rocksdb = ["surreal", "valence-backend-surreal/embedded-rocksdb"]
surreal-remote = ["surreal", "valence-backend-surreal/remote"]
surreal-inventory = ["surreal", "valence-backend-surreal/inventory"]
surreal-connect-env = ["surreal", "valence-backend-surreal/connect-env"]
telemetry-console = ["dep:valence-telemetry"]
# Compatibility aliases for older orbital / kit crates.
leptos-integration = []
ssr = ["mem", "surreal"]

[dependencies]
valence-core = { workspace = true }
valence-macros = { workspace = true }
valence-telemetry = { workspace = true, optional = true }
valence-backend-mem = { workspace = true, optional = true }
valence-backend-sqlite = { workspace = true, optional = true }
valence-backend-postgres = { workspace = true, optional = true }
valence-backend-mongodb = { workspace = true, optional = true }
valence-backend-indradb = { workspace = true, optional = true }
valence-backend-hybrid = { workspace = true, optional = true }
valence-backend-redis = { workspace = true, optional = true }
valence-backend-surreal = { workspace = true, optional = true }

[dev-dependencies]
tokio = { workspace = true, features = ["rt-multi-thread", "macros"] }
valence-backend-surreal = { workspace = true, features = ["embedded-mem", "inventory"] }
surrealdb = { workspace = true, features = ["kv-mem"] }

[[example]]
name = "quickstart"
required-features = ["mem"]

[[example]]
name = "multi_backend"
required-features = ["mem"]

[[example]]
name = "quickstart_sqlite"
required-features = ["sqlite"]

[[example]]
name = "quickstart_indradb"
required-features = ["indradb"]

[[example]]
name = "surreal_embedded"
required-features = ["surreal"]

[[example]]
name = "quickstart_postgres"
required-features = ["postgres"]

[[example]]
name = "quickstart_mongodb"
required-features = ["mongodb"]

[[example]]
name = "quickstart_redis"
required-features = ["redis"]

[[example]]
name = "quickstart_telemetry"
required-features = ["mem", "telemetry-console"]

[lints]
workspace = true
