[package]
name = "codegen-host"
version = "0.1.0"
edition = "2021"
publish = false

[lib]
path = "src/lib.rs"

[[bin]]
name = "codegen-host"
path = "src/main.rs"

[dependencies]
valence = { path = "../../valence", features = ["mem"], package = "uf-valence" }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
async-trait = { workspace = true }

[build-dependencies]
valence-codegen = { path = "../../valence-codegen", package = "uf-valence-codegen", version = "0.1.1" }

[package.metadata.cargo-machete]
ignored = ["async-trait", "serde"]

[dev-dependencies]
tokio = { workspace = true, features = ["rt-multi-thread", "macros"] }

[lints]
workspace = true
