[package]
name = "embedded-bootstrap"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
valence = { path = "../../valence", features = ["surreal", "surreal-inventory"], package = "uf-valence" }
tokio = { workspace = true, features = ["rt-multi-thread", "macros"] }
serde_json = { workspace = true }

[lints]
workspace = true
