[package]
name = "hop-pair-model-host"
version = "0.1.0"
edition = "2021"
publish = false
description = "Project/Task schemas with abstract hop_a/hop_b engines for Cartesian pair tests"

[lib]
path = "src/lib.rs"

[dependencies]
valence = { path = "../../valence", features = ["mem"], package = "uf-valence" }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
async-trait = { workspace = true }

[build-dependencies]
valence-codegen = { path = "../../valence-codegen", package = "uf-valence-codegen", version = "0.1.1" }

[lints]
workspace = true

[package.metadata.cargo-machete]
ignored = ["async-trait", "serde", "serde_json"]
